Updated '/index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
 	<title>Elegance Portfolio Template</title>
+	<meta name="google-site-verification" content="rXpYfKfBJxFxNC9S5QQi0ZyPwtfvHoIP8fVaYGSkVf0" />
 </head>
 <body>
 	<header class="cd-header">
