--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
 		<ul class="cd-primary-nav">
 			<li class="cd-label">Who</li>
 
-			<li><a href="#0">About Us</a></li>
+			<li><a href="#0">About Usa</a></li>
 			<li><a href="#0">Blog</a></li>
 
 			<li class="cd-label">What</li>
